--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -20,6 +20,7 @@ nav{
     display: flex;
     justify-content:space-between;
     align-items: center;
+    margin: 0px 160px;
 }
 .nav-titel{
 color:  #181818;
@@ -37,4 +38,18 @@ nav li{
 nav a{
     text-decoration: none;
     color:#474747 ;
+}
+/* header releated style */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px  30px 30px 150px;
+    display: flex;
+
+}
+.banner .profile-pic{
+    width: 500px;
+
+
 }
