--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,55 +1,100 @@
 /* common shared style */
-body{
-    font-family: 'Open Sans', sans-serif;
+body {
+  font-family: "Open Sans", sans-serif;
 }
 
-.text-primary{
-    color: #FD6E0A;
+.text-primary {
+  color: #fd6e0a;
 }
-.btn-primary{
-    border-radius: 5px;
-background: #FD6E0A;
-border: 0px;
-color:  #FFF;
-font-size: 20px;
-font-weight: 700;
-padding: 15px 35px;
+.btn-primary {
+  border-radius: 5px;
+  background: #fd6e0a;
+  border: 0px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 15px 35px;
 }
 /* nav releated style */
-nav{
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    margin: 0px 160px;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px 160px;
 }
-.nav-titel{
-color:  #181818;
-font-size: 45px;
-font-weight: 800;
+.nav-titel {
+  color: #181818;
+  font-size: 45px;
+  font-weight: 800;
 }
-nav >ul{
-    display: flex;
-    align-items: center;
+nav > ul {
+  display: flex;
+  align-items: center;
 }
-nav li{
-    list-style: none;
-    margin-right:50px ;
+nav li {
+  list-style: none;
+  margin-right: 50px;
 }
-nav a{
-    text-decoration: none;
-    color:#474747 ;
+nav a {
+  text-decoration: none;
+  color: #474747;
 }
 /* header releated style */
-.header{
-    background-color: #FFF8F3;
+.header {
+  background-color: #fff8f3;
+  background-image: url(../images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
-.banner{
-    padding: 30px  30px 30px 150px;
-    display: flex;
+.banner {
+  padding: 30px 30px 0px 270px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.banner-greeting {
+  color: #474747;
+  font-size: 45px;
+  margin-bottom: 0px;
+}
+.banner-titel{
+    color:  #181818;
+font-size: 85px;
+font-weight: 700;
+margin-top: 5px;
+}
+.banner-description{
+    width:570px ;
+    color: #757575;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+margin-top: -20px;
+}
+.banner .profile-pic {
+  width: 500px;
+}
+/* main section */
+.about{
+
+    background: #FFF8F3;
+    padding: 131px;
+    border-radius: 10px;
+    margin-top: 130px;
+
 
 }
-.banner .profile-pic{
-    width: 500px;
-
+.section-titel{
+    color: #181818;
+text-align: center;
+font-size: 35px;
+font-weight: 700;
+}
+.section-description{
+    color:  #757575;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
 
 }
