--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -75,6 +75,12 @@ margin-top: -20px;
   width: 500px;
 }
 /* main section */
+main{
+    max-width: 1140px;
+    height: 550px;
+    margin: 0px auto;
+}
+
 .about{
 
     background: #FFF8F3;
@@ -97,4 +103,11 @@ font-size: 18px;
 font-weight: 400;
 line-height: 30px;
 
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
