--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -57,57 +57,83 @@ nav a {
   font-size: 45px;
   margin-bottom: 0px;
 }
-.banner-titel{
-    color:  #181818;
-font-size: 85px;
-font-weight: 700;
-margin-top: 5px;
+.banner-titel {
+  color: #181818;
+  font-size: 85px;
+  font-weight: 700;
+  margin-top: 5px;
 }
-.banner-description{
-    width:570px ;
-    color: #757575;
-font-size: 18px;
-font-weight: 400;
-line-height: 30px;
-margin-top: -20px;
+.banner-description {
+  width: 570px;
+  color: #757575;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-top: -20px;
 }
 .banner .profile-pic {
   width: 500px;
 }
 /* main section */
-main{
-    max-width: 1140px;
-    height: 550px;
-    margin: 0px auto;
+main {
+  max-width: 1140px;
+  height: 550px;
+  margin: 0px auto;
 }
 
-.about{
-
-    background: #FFF8F3;
-    padding: 131px;
-    border-radius: 10px;
-    margin-top: 130px;
-
-
+.about {
+  background: #fff8f3;
+  padding: 131px;
+  border-radius: 10px;
+  margin-top: 130px;
 }
-.section-titel{
-    color: #181818;
-text-align: center;
-font-size: 35px;
-font-weight: 700;
+.section-titel {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
 }
-.section-description{
-    color:  #757575;
-text-align: center;
-font-size: 18px;
-font-weight: 400;
-line-height: 30px;
+.section-description {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+.about-info {
+  text-align: center;
+}
 
+main section {
+  margin-top: 130px;
 }
-.about-info-container{
-    display: flex;
-    justify-content: space-around;
+/* what id do section */
+#what-i-do {
+  padding: 30px 150px;
 }
-.about-info{
-    text-align: center;
+.skil-container {
+  display: flex;
+  gap: 24px;
+}
+.skills-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
+.skills {
+  padding: 30px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+/* resume section */
+.resume-column-titel {
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
 }
