--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -137,6 +137,34 @@ main section {
   font-size: 30px;
   font-weight: 700;
 }
-.resume-container{
+.resume-container {
   display: flex;
+  gap: 50px;
+  align-items: center;
+}
+.resume-item-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  width: 500px;
+  margin-bottom: 30px;
+}
+.resume-item-Insitute {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+.resume-item-titel {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+  bottom: 10px;
+  margin-top: 30px;
+}
+.download-cv{
+  text-align: center;
+  margin-top: 50px;
 }
