--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -164,7 +164,15 @@ main section {
   bottom: 10px;
   margin-top: 30px;
 }
-.download-cv{
+.download-cv {
   text-align: center;
   margin-top: 50px;
+}
+/* footer start */
+footer {
+  margin-top: 2000px;
+  display: flex;
+  background: #FFF8F3;
+  padding: 130px 200px;
+
 }
