--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -42,9 +42,11 @@ nav a {
 /* header releated style */
 .header {
   background-color: #fff8f3;
-  background-image: url(../images/header_bg.png);
+  background-image: url("../images/header_bg.png") ,url("../images/developer.png");
   background-repeat: no-repeat;
-  background-position: bottom right;
+  background-position: bottom right , top left;
+
+
 }
 .banner {
   padding: 30px 30px 0px 270px;
